still delete service has logic error